# linfa-python

./: .gitignore  Cargo.toml  README.md  pyproject.toml  setup.py
linfa/: LinfaKMeans.py  __init__.py
src/: lib.rs
tests/: test_k_means.py
