[package]
authors = ["LukeMathWalker", "sitegui", "dunnock"]
name = "linfa_bindings"
version = "0.1.0"
edition = "2018"

[dependencies]
rayon = "1.0.2"
pyo3 = { version = "0.8.2", features = ["extension-module"] }
linfa-clustering = { git = "https://github.com/LukeMathWalker/linfa", branch = "master" }
ndarray = { version = "0.13" }
rand_isaac = { version = "0.2.0", features = ["serde1"] }
ndarray-rand = "0.11"
numpy = "0.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "linfa"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
