[tool.poetry]
name = "linfa"
version = "0.1.0"
authors = ["LukeMathWalker <rust@lpalmieri.com>"]
description = "Python bindings for the Rust crate linfa, a Rust machine learning framework."

[tool.poetry.dependencies]
python = "^3.7"
pip= "^19.3"
scikit-learn = "^0.21.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2.4"
pytest-benchmark = "^3.2.2"
maturin = "^0.7.7"
twine = "^2.0.0"

[build-system]
requires = ["maturin"]
build-backend = "maturin"
